cc_library(
    name = "array",
    hdrs = [
        "include/array/array.h",
        "include/array/ein_reduce.h",
        "include/array/image.h",
        "include/array/matrix.h",
    ],
    include_prefix = "third_party",
    includes = ["include"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
